<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <!-- Ссылки и тексты для экрана настроек -->
    <string name="course_link">https://practicum.yandex.ru/profile/android-developer-plus/</string>

    <string name="support_email">rassada2021@yandex.ru</string>

    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="track_description_separator">&#8226;</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="player_add_button_description">Добавить в плейлист</string>
    <string name="player_play_button_description">Воспроизвести</string>
    <string name="player_pause_button_description">Пауза</string>
    <string name="player_favorite_button_description">Добавить в избранное</string>
    <string name="player_default_time">00:00</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
</resources>