<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screen_background_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        app:titleTextAppearance="@style/SettingsItemTextStyle"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="@color/primary_text_color" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/dark_theme"
        android:textAppearance="@style/SettingsItemTextStyle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/share_app"
        android:textAppearance="@style/SettingsItemTextStyle"
        app:drawableEndCompat="@drawable/ic_share_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/support"
        android:textAppearance="@style/SettingsItemTextStyle"
        app:drawableEndCompat="@drawable/ic_support_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/user_agreement"
        android:textAppearance="@style/SettingsItemTextStyle"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24" />

</LinearLayout>
