<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Назад"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="@color/primary_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/player_margin_horizontal"
            android:layout_marginTop="@dimen/player_cover_margin_top"
            android:layout_marginEnd="@dimen/player_margin_horizontal"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            tools:src="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_margin_horizontal"
            android:layout_marginTop="@dimen/player_track_name_margin_top"
            android:layout_marginEnd="@dimen/player_margin_horizontal"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coverImageView"
            tools:text="Название трека" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_margin_horizontal"
            android:layout_marginTop="@dimen/player_artist_name_margin_top"
            android:layout_marginEnd="@dimen/player_margin_horizontal"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackNameTextView"
            tools:text="Имя исполнителя" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="@dimen/player_play_button_size"
            android:layout_height="@dimen/player_play_button_size"
            android:layout_marginTop="@dimen/player_play_button_margin_top"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
            android:contentDescription="@string/player_play_button_description" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="@dimen/player_action_button_size"
            android:layout_height="@dimen/player_action_button_size"
            android:layout_marginStart="@dimen/player_margin_horizontal"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_add_to_playlist"
            app:tint="@color/yp_white"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton"
            android:contentDescription="@string/player_add_button_description"/>

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="@dimen/player_action_button_size"
            android:layout_height="@dimen/player_action_button_size"
            android:layout_marginEnd="@dimen/player_margin_horizontal"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_favorite_border"
            app:tint="@color/yp_white"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton"
            android:contentDescription="@string/player_favorite_button_description" />

        <TextView
            android:id="@+id/playbackTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_playback_time_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:text="00:00"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/player_playback_time_text_size"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/player_details_margin_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/player_details_margin_horizontal" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labelsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="durationLabel, albumLabel, yearLabel, genreLabel, countryLabel" />

        <TextView
            android:id="@+id/durationLabel"
            style="@style/TrackDetailsLabelStyle"
            android:layout_marginTop="@dimen/player_details_group_margin_top"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/playbackTimeTextView" />

        <TextView
            android:id="@+id/durationValue"
            style="@style/TrackDetailsValueStyle"
            app:layout_constraintBottom_toBottomOf="@id/durationLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/labelsBarrier"
            app:layout_constraintTop_toTopOf="@id/durationLabel"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumLabel"
            style="@style/TrackDetailsLabelStyle"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/durationLabel" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/TrackDetailsValueStyle"
            app:layout_constraintBottom_toBottomOf="@id/albumLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/labelsBarrier"
            app:layout_constraintTop_toTopOf="@id/albumLabel"
            tools:text="Yesterday (Remastered)" />

        <TextView
            android:id="@+id/yearLabel"
            style="@style/TrackDetailsLabelStyle"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/albumLabel" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/TrackDetailsValueStyle"
            app:layout_constraintBottom_toBottomOf="@id/yearLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/labelsBarrier"
            app:layout_constraintTop_toTopOf="@id/yearLabel"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreLabel"
            style="@style/TrackDetailsLabelStyle"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/yearLabel" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/TrackDetailsValueStyle"
            app:layout_constraintBottom_toBottomOf="@id/genreLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/labelsBarrier"
            app:layout_constraintTop_toTopOf="@id/genreLabel"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryLabel"
            style="@style/TrackDetailsLabelStyle"
            android:layout_marginBottom="24dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/genreLabel" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/TrackDetailsValueStyle"
            app:layout_constraintBottom_toBottomOf="@id/countryLabel"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/labelsBarrier"
            app:layout_constraintTop_toTopOf="@id/countryLabel"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="albumLabel, albumValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>